# fast-api-course

./: .gitignore  pyproject.toml
scripts/: start_bot.sh
src/fast_api_course/: main.py
