[project]
name = "fast-api-course"
version = "0.1.0"
description = ""
authors = [
    {name = "SwairIT",email = "1q2w3e4r5t6y7u89o0pi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "fast_api_course", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
